# node-fhe-accelerate

./: .eslintrc.json  .gitignore  BENCHMARK_REPORT.md  BUILDING.md  Cargo.toml  Memory_System_(size=1024KB).csv  Memory_System_(size=16384KB).csv  Memory_System_(size=64KB).csv  Modular_Multiplication_(n=1024).csv  Modular_Multiplication_(n=16384).csv  Modular_Multiplication_(n=4096).csv  Modular_Multiplication_(n=65536).csv  NATIVE_ADDON.md  NTT_(degree=1024).csv  NTT_(degree=16384).csv  NTT_(degree=4096).csv  Neural_Engine_Operations_(batch=1024).csv  Neural_Engine_Operations_(batch=16384).csv  Neural_Engine_Operations_(batch=65536).csv  Pipelined_Operations_(degree=16384).csv  Pipelined_Operations_(degree=4096).csv  Polynomial_Multiplication_(degree=1024).csv  Polynomial_Multiplication_(degree=4096).csv  README.md  Ray_Tracing_Operations_(base=256,_levels=4).csv  SETUP.md  Texture_Sampling_(degree=1024,_points=10000).csv  benchmark_report.html  benchmark_results.json  build.rs  index.d.ts  napi.config.json  package.json  run_benchmark  run_comprehensive_benchmark  test-modular.js  test_metal_compute  test_multi_limb  test_neon_correctness  test_neural_engine  (+5 more)
.cargo/: config.toml
benchmark_results/: BENCHMARK_REPORT.md  Memory_System_(size=1024KB).csv  Memory_System_(size=16384KB).csv  Memory_System_(size=64KB).csv  Modular_Multiplication_(n=1024).csv  Modular_Multiplication_(n=16384).csv  Modular_Multiplication_(n=4096).csv  Modular_Multiplication_(n=65536).csv  NTT_(degree=1024).csv  NTT_(degree=16384).csv  NTT_(degree=4096).csv  Pipelined_Operations_(degree=4096).csv  (+10 more)
(+162 files in other folders)
